Limit prefering glClear for clearing textures to macOS

This behavior only helps on macOS and hits lots of bugs on lots of other
platforms.

Bug: 883276
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I7b85b254c962003cf1fa5646d8a304ce04aa856a
Reviewed-on: https://chromium-review.googlesource.com/1236930
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593121}
Former-commit-id: 7e86b9953779635b568e94d17deb5d4e2ab85287